--- a/MetaWear.Test/MetaWear.Test.csproj
+++ b/MetaWear.Test/MetaWear.Test.csproj
@@ -95,6 +95,7 @@
     <Compile Include="UnitTestBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccelerometerBoschTest.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
