--- a/nuget/MetaWear.CSharp.nuspec
+++ b/nuget/MetaWear.CSharp.nuspec
@@ -15,13 +15,17 @@
         <tags>bluetoothle uap metawear sensors</tags>
         <dependencies>
             <group targetFramework="uap10.0">
-                <dependency id="Microsoft.NETCore.UniversalWindowsPlatform" version="5.3.1" />
+                <dependency id="Microsoft.NETCore.UniversalWindowsPlatform" version="6.0.4" />
             </group>
         </dependencies>
     </metadata>
     <files>
         <file src="build\**" target="build" />
         <file src="..\MetaWear.Uwp\bin\Release\MbientLab.MetaWear.Uwp.dll" target="lib\uap10.0" />
+        <file src="..\MetaWear.Uwp\bin\Release\MbientLab.MetaWear.Uwp.xml" target="lib\uap10.0" />
         <file src="..\MetaWear.DotNet\bin\Release\MbientLab.MetaWear.DotNet.dll" target="lib\net462" />
+        <file src="..\MetaWear.DotNet\bin\Release\MbientLab.MetaWear.DotNet.xml" target="lib\net462" />
+        <file src="..\MetaWear.DotNetStandard\bin\Release\netstandard2.0\MbientLab.MetaWear.DotNetStandard.dll" target="lib\netstandard2.0" />
+        <file src="..\MetaWear.DotNetStandard\bin\Release\netstandard2.0\MbientLab.MetaWear.DotNetStandard.xml" target="lib\netstandard2.0" />
     </files>
 </package>
