--- a/MetaWear.DotNetStandard/MetaWear.DotNetStandard.csproj
+++ b/MetaWear.DotNetStandard/MetaWear.DotNetStandard.csproj
@@ -5,8 +5,12 @@
     <AssemblyName>MbientLab.MetaWear.DotNetStandard</AssemblyName>
     <RootNamespace>MbientLab.MetaWear.DotNetStandard</RootNamespace>
     <DelaySign>false</DelaySign>
-    <FileVersion>0.3.0.0</FileVersion>
+    <FileVersion>0.4.0.0</FileVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Description>MetaWear C# API for netstandard2.0</Description>
+    <Product>MetaWear</Product>
+    <Company>MbientLab</Company>
+    <Authors>MbientLab</Authors>
   </PropertyGroup>
 
   <Import Project="..\MetaWear\MetaWear.projitems" Label="Shared" />
