--- a/nuget/MetaWear.Win10.nuspec
+++ b/nuget/MetaWear.Win10.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata minClientVersion="4.1">
-    <id>MetaWear.Win10</id>
+    <id>MetaWear.CSharp.Win10</id>
     <title>MetaWear C# SDK (Windows 10)</title>
     <version>0.0.0</version>
     <authors>MbientLab</authors>
@@ -15,10 +15,12 @@
     <releaseNotes>https://github.com/mbientlab/MetaWear-SDK-CSharp/releases/tag/1.0.0</releaseNotes>
     <tags>bluetoothle metawear metamotion metatracker sensors netstandard2.0 net4.6.1 uap</tags>
     <dependencies>
-      <dependency id="MetaWear" version="[1.0, 2.0)" />
+      <group>
+        <dependency id="MetaWear.CSharp" version="[1.0, 2.0)" />
+      </group>
 
       <group targetFramework="uap10.0">
-        <dependency id="Microsoft.NETCore.UniversalWindowsPlatform" version="6.0.8" />
+        <dependency id="Microsoft.NETCore.UniversalWindowsPlatform" version="6.0.*" />
       </group>
     </dependencies>
   </metadata>
